--- a/package.json
+++ b/package.json
@@ -9,8 +9,11 @@
     "@testing-library/user-event": "^13.5.0",
     "emailjs-com": "^3.2.0",
     "react": "^18.2.0",
+    "react-carousel-slider": "^2.0.13",
     "react-dom": "^18.2.0",
+    "react-responsive-carousel": "^3.2.23",
     "react-scripts": "5.0.1",
+    "react-toastify": "^9.1.1",
     "react-typical": "^0.1.3",
     "web-vitals": "^2.1.4"
   },
