--- a/package.json
+++ b/package.json
@@ -11,8 +11,10 @@
     "react": "^18.2.0",
     "react-carousel-slider": "^2.0.13",
     "react-dom": "^18.2.0",
+    "react-multi-carousel": "^2.8.2",
     "react-responsive-carousel": "^3.2.23",
     "react-scripts": "5.0.1",
+    "react-scroll": "^1.8.9",
     "react-toastify": "^9.1.1",
     "react-typical": "^0.1.3",
     "web-vitals": "^2.1.4"
