--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "@testing-library/user-event": "^13.5.0",
     "emailjs-com": "^3.2.0",
     "react": "^18.2.0",
+    "react-card-slide": "^1.0.13",
     "react-carousel-slider": "^2.0.13",
     "react-dom": "^18.2.0",
     "react-multi-carousel": "^2.8.2",
