--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "react-card-slide": "^1.0.13",
     "react-carousel-slider": "^2.0.13",
     "react-dom": "^18.2.0",
+    "react-helmet": "^6.1.0",
     "react-multi-carousel": "^2.8.2",
     "react-responsive-carousel": "^3.2.23",
     "react-scripts": "5.0.1",
